8205702: assert(UseCompressedClassPointers) failed in universe.hpp
Reviewed-by: coleenp, ccheung